--- a/app/src/main/res/layout/listado_productos.xml
+++ b/app/src/main/res/layout/listado_productos.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -10,13 +9,11 @@
         android:id="@+id/toolbarListado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:title="@string/titulo_principal"
         android:background="@color/celeste"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-    </androidx.appcompat.widget.Toolbar>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:orientation="vertical"
